usecase-9/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-deploy

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: app-ku
        image: rullabcd/app:v1
        ports:
        - containerPort: 80
