usecase-9/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app-svc

spec:
  selector:
    app: nginx

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
