usecase-9/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress

spec:
  rules:
  - host: "appku.rullabcd.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 80
